# planner

./: CMakeLists.txt  package.xml  plan.txt
FF-X/: domain.pddl  ff  tyreworld_facts1
include/planner/: planner_node.hpp
src/: plan_parser.cpp  planner_main.cpp  planner_node.cpp  planner_node_copy.cpp  solution.txt
